--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
-  	<%= link_to "Home" , root_path %>
-  	<%= link_to "about" , about_path %>
-    <%= yield %>
+    <%= render "layouts/header" %>
+      <%= yield %>
   </body>
 </html>
