--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
-
-<h1>Welcome to Picturing</h1>
-<p>Sign up <%= link_to "here", "#" %></p>
+<div class = "jumbotron center">
+	<div class='container-fluid'>
+		<h1>Welcome to the Slovenian Trip </h1>
+		<%= link_to "Log In" , "#" , class: "btn btn-default btn-lg" %>
+		<%= link_to "Sign up" , "#" , class: "btn btn-primary btn-lg" %>
+	</div>
+</div>
