--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Slo Trip', root_path , class: "navbar-brand" %>
+      <%= link_to root_path, class: "navbar-brand" do %>
+       Slo Trip &nbsp;<i class="glyphicon glyphicon-tree-conifer"></i>
+      <% end %>
+     
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,6 +22,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Home',root_path %></li>
         <li><%= link_to 'About',about_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
