--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,14 @@
 <div class = "jumbotron center">
 	<div class='container-fluid'>
 		<h1>Welcome to the Slovenian Trip </h1>
-		<%= link_to "Log In" , "#" , class: "btn btn-default btn-lg" %>
-		<%= link_to "Sign up" , "#" , class: "btn btn-primary btn-lg" %>
+
+		<% if user_signed_in? %>
+			#zbeub
+		<% else %>
+			<p>
+				<%= link_to "Log in" , new_user_session_path , class: "btn btn-default btn-lg" %>
+				<%= link_to "Sign up" , new_user_registration_path , class: "btn btn-primary btn-lg" %>
+			</p>
+		<% end %>
 	</div>
 </div>
