--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,10 @@
       
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Home',root_path %></li>
+        <li><%= link_to edit_user_registration_path do %>
+          Account &nbsp;<i class="glyphicon glyphicon-cog"></i>
+          <% end %>
+        </li>
         <li><%= link_to 'About',about_path %></li>
         <% if user_signed_in? %>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
