--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_field :description, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.submit class: "btn btn-default" %>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
